[gd_scene load_steps=7 format=3 uid="uid://c7t78jgnvl2un"]

[ext_resource type="Script" uid="uid://dqxepoux544tm" path="res://boss.gd" id="1_6xxrv"]
[ext_resource type="PackedScene" uid="uid://cevcytdnelc48" path="res://enemy_bullet.tscn" id="2_lnbgr"]
[ext_resource type="PackedScene" uid="uid://ckwob8wkpdi28" path="res://explosion.tscn" id="3_o1i15"]
[ext_resource type="Texture2D" uid="uid://wfywmfjsh57r" path="res://boss_sprite.png" id="4_lnbgr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4gyqm"]
radius = 54.0
height = 108.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2ko04"]
radius = 54.0
height = 108.0

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_6xxrv")
health = 15
bullet_scene = ExtResource("2_lnbgr")
explosion_scene = ExtResource("3_o1i15")
metadata/_edit_vertical_guides_ = [-50.0]

[node name="Sprite2D" type="Sprite2D" parent="." groups=["enemies"]]
rotation = -1.5707964
scale = Vector2(0.16, 0.16)
texture = ExtResource("4_lnbgr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_4gyqm")

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CapsuleShape2D_2ko04")

[node name="RayCast" type="RayCast2D" parent="."]
collision_mask = 5

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
